clusters/dev/example-3/ingress-example-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - custom.aks.rk3.dev
      secretName: tls-secret
  rules:
    - host: "custom.aks.rk3.dev"
      http:
        paths:
          - backend:
              service:
                name: store-front
                port:
                  number: 80
            path: /
            pathType: Prefix
